nunaliit2-js/src/main/js/nunaliit2/css/basic/n2.widget.css
/*! n2.widget.css */

/* ==========================================================================
   - Theme styles for Nunaliit demo atlas (Fonts, colors, images, textures etc)
   ========================================================================== */



/* Desktop screens */

/* ============================== */
/* ! HEADER SECTION   */
/* ============================== */

/* Header Title */
.nunaliit_title {
	margin: 11.5px 20px;
	border: 0;
	padding: 0;
	z-index:10;	
	display:-moz-inline-stack;
	display:inline-block;
	zoom:1;
	*display:inline;
}

/* Sub-Header Title */

.nunaliit_module_title {
	display: block;
	width: 100%;
	margin: 0;
	padding: 0;
	z-index: 10;
}
.nunaliit_title_link {
	padding:8px 20px;
	margin:0;
	display:-moz-inline-stack;
	display:inline-block;
	zoom:1;
	*display:inline;
}

/* Header Menu */
.nunaliit_header-nav {
	display:-moz-inline-stack;
	display:inline-block;
	zoom:1;
	*display:inline;
	margin: 0 0 0 25px;
	padding: 0;
	list-style:	none;
	line-height:1.0;
	height:100%;
	vertical-align: top;
}
.nunaliit_header-nav ul {
	position: absolute;
	top: 0;
	left:100%;
	margin: 0;
	padding: 0;
	display: none;
	width: 100%;
}
.nunaliit_header-nav li {
	float: left;
	position: relative;
	margin:0;
	padding:0;
}
.nunaliit_header-nav a {
	display: block;
	position: relative;
	padding:15px;
	padding-right: 25px;
}
.nunaliit_header-nav img {
	display:none;
}
.nunaliit_header-nav>ul {
	top: 0;
	left:auto;
	height: 100%;
	display:block;
	width: inherit;
}
.nunaliit_header-nav>ul>li>ul {
	left: -1px;
	width: 150%;
	top: 100%;
}
.nunaliit_header-nav ul li {
	width: 100%;
}
.nunaliit_header-nav>ul>li {
	width:auto;
	display:-moz-inline-stack;
	display:inline-block;
	zoom:1;
	*display:inline;
	height:100%;
}
.nunaliit_header-nav li:hover {
	/*visibility: inherit;  fixes IE7 'sticky bug' */
	text-decoration:underline;
}
.nunaliit_header-nav li:hover>ul {
	display:block;
	z-index: 99;
}


/* Table of Contents */
.nunaliit_table_of_contents {
	position: absolute;	
	top: 0;
	left: 0;
	right:451px;
	bottom:0;
	padding-top:34px;
	overflow:auto;
}
.nunaliit_table_of_contents ul {
	padding:0;
	margin:0;
}
.nunaliit_table_of_contents ul li {
	list-style:none;
	margin:0;
	padding:0;
}
.nunaliit_table_of_contents ul li a {
	padding-bottom:2.5%;
	display:block;
}
.nunaliit_table_of_contents ul img {
	width:100%;
	margin-bottom:10px;
}
.nunaliit_table_of_contents ul>li>ul>li {
	float:left;
	width:28%;
	padding:2.5%;
}
.nunaliit_table_of_contents ul>li>ul>li:last-child {
	margin-right:0;
}
.nunaliit_table_of_contents ul>li>ul>li>ul>li {
	float:left;
	width:100%;
	padding:2.5% 0;
}
.nunaliit_table_of_contents>ul>li>a {
	display:none;
}

/* Map Controls - Zoom - Layer Switch */
.olControlLayerSwitcher {
	left: 47px;
	top: 100px;
}
.olControlLayerSwitcher .maximizeDiv, .olControlLayerSwitcher .minimizeDiv {
	width: 28px;
	height: 28px;
	background-image: url('openlayers/settings_icon.png');
	opacity:0.7;
	top:5px;
	left:-29px;
}
.olControlLayerSwitcher .maximizeDiv:hover, .olControlLayerSwitcher .minimizeDiv:hover {
	opacity:1;
}
#OpenLayers_Control_MaximizeDiv img {
	display:none;
}
#OpenLayers_Control_MinimizeDiv_innerImage {
	display:none;
}
.olControlLayerSwitcher .layersDiv {
	background: url('openlayers/popup_bg.png') no-repeat top left;
	padding:11px 20px;
	margin: 6px 0 0 5px;
}
div.olControlZoom {
	top: 35px;
	left: 20px;
	position: absolute;
	background: none;
	border-radius: 0;
	padding: 0;
}
div.olControlZoom a { 
	background: #000;
	opacity:0.7;
	padding:3px;
	border-radius: 0;
	moz-border-radius:0;
}
div.olControlZoom a:hover { 
	background: #000;
	opacity:1;
}	
.olControlEditingToolbar div {
	float: left;
}
div.olControlMousePosition {
	right: 25px;
	background: rgba(255, 255, 255, 0.7);
}

/* ============================== */
/* ! FOOTER SECTION   */
/* ============================== */


.nunaliit_footer_nav {
	margin:2px 10px;
	list-style:none;
	display:-moz-inline-stack;
	display:inline-block;
	zoom:1;
	*display:inline;
}
.nunaliit_footer_content {
	margin:2px 10px;
	display:-moz-inline-stack;
	display:inline-block;
	zoom:1;
	*display:inline;
}
.nunaliit_footer_nav ul {
	margin:0;
	padding:0;
}

.nunaliit_footer_nav ul li {
	padding:0 10px;
	margin:0;
	display:-moz-inline-stack;
	display:inline-block;
	zoom:1;
	*display:inline;
}
.nunaliit_footer_nav ul li:first-child {
	margin-right:19px;
}
.nunaliit_footer_nav ul li:last-child {
	margin-left:0;
	padding-left:0;
	border-left:0;	
}


/* Smaller screens */

@media only screen and (max-width: 1023px) {
}


/* Mobile */

@media handheld, only screen and (max-width: 767px) {
}

/* 
==============================
LAYER DIALOG SECTION 
==============================
*/

.editorSelectLayerContent {
	overflow: auto;
}
.editorSelectLayerContent div {
	padding: 3px 5px;
}
.editorSelectLayerContent label {
	padding: 0 5px;
}
.editorSelectLayerButtons {
	padding: 10px 0;
}

/* 
==============================
ROLE LIST 
==============================
*/
.n2_roles_list {
	max-height: 400px;
	overflow: auto;
	margin-bottom: 5px;
}


/* 
==============================
Layer Switcher 
==============================
*/
.olControlLayerSwitcher {
	width: 215px;
}
.n2layerSwitcher_input_container
,.n2layerSwitcher_label_container
,.n2layerSwitcher_preview_container {
	display: inline-block;
	vertical-align: top;
}
.n2layerSwitcher_label_container {
	padding-left: 3px;
	width: 125px;
}
.n2layerSwitcher_preview_container {
	padding-left: 3px;
}

/*
==============================
Max Height Widget
==============================
*/
.n2show_maxHeight_truncated {
/*
	background: -linear-gradient(top, #000, #000 80%, #FFF);
	background: -webkit-linear-gradient(top, #000, #000 80%, #FFF);
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
*/
}

/* 
==============================
Help Dialog 
==============================
*/
.n2help_dialog .ui-dialog-titlebar {
	background: #3a3a3a;
	color: #ffffff;
	font-family: helvetica, sans-serif;
	font-weight: 500;
}

/* 
==============================
Gazetteer Dialog 
==============================
*/
.n2MapAndControls_gazette_results {
	position: relative;
	margin-top: 5px;
	width: 360px;
	height: 440px;
	overflow: auto;
}

.n2MapAndControls_gazette_result {
	width: 340px;
	border: 1px #cccccc solid;
}

.n2MapAndControls_gazette_result:hover {
	background-color: #cccccc;
}

.n2MapAndControls_gazette_result_name {
	font-size: 120%;
}

.n2MapAndControls_gazette_result_location {
	font-size: 80%;
}

/* 
==============================
CreateDocument widget 
==============================
*/
.nunaliit_content .n2widget_createDocument {
	position: absolute;
	top: 5px;
	right: 455px;
}
.nunaliit_content .n2widget_createDocumentFromSchema {
	position: absolute;
	top: 5px;
	right: 455px;
}

/* 
==============================
Export Widget 
==============================
*/
.nunaliit_content .n2widget_export {
	position: absolute;
	top: 5px;
	right: 455px;
}

.n2_export_scriptArea {
	width: 500px;
	height: 300px;
}

.n2_export_scriptDisplay {
	position: relative;
	padding: 8px;
	width: 500px;
	height: 300px;
    overflow: auto;
    white-space: pre;
	background-color: rgb(255, 255, 255);
	border-color: rgb(204, 204, 204);
	border-style: solid;
	border-width: 1px;
}

/* 
==============================
Timeline widget 
==============================
*/
.nunaliit_content .n2timeline {
	position: absolute;
	bottom: 0px;
	right: 451px;
	left: 0px;
	height: 62px;
}

.n2_display_format_tiled .nunaliit_content .n2timeline {
	right: 640px;
}

.n2timeline {
	background-color: #00ff88;
}

.n2timeline_container {
    position: absolute;
    left: 20px;
    right: 20px;
    top: 0;
    bottom: 0;
}

.n2timeline_slider_wrapper {
	margin-top: 10px;
	margin-bottom: 10px;
	margin-left: 0;
	margin-right: 0;
	padding: 0;
	border: none;
}

.n2timeline .n2timeline_slider {
	background-color: #000000;
}

.n2timeline .n2timeline_slider .ui-slider-range {
	background-color: #ffffff;
}

.n2timeline_range {
	width: 100%;
	font-size: 12px;
	padding-top: 2px;
	padding-bottom: 2px;
	padding-left: 0;
	padding-right: 0;
}


.n2timeline_interval {
	width: 100%;
	font-size: 12px;
	padding-top: 2px;
	padding-bottom: 2px;
	padding-left: 0;
	padding-right: 0;
}

/* 
==============================
Layer selection widget 
==============================
*/
.nunaliit_module_title .n2layerSelectionWidget {
    display: inline;
    padding: 6px 20px;
}


/* 
==============================
Polar Stereographic Projection Selector 
==============================
*/
.nunaliit_content .n2polarStereographicProjectionSelector {
	position: absolute;
	bottom: 10px;
	left: 10px;
	width: 100px;
	height: 100px;
}

.n2polarStereographicProjectionSelector {
	/* background-color: #ffffff; */
}


/* 
==============================
Wait Widget 
==============================
*/

.n2wait {
    position: absolute;
    display: block;
    background-color: #ffffff;
    right: 0;
    bottom: 0;
    border: solid #000000 1px;
}

.n2_content_contains_text.n2_content_contains_map .n2wait {
    right: 450px;
	bottom: 15px;
}

.n2_display_format_tiled .n2_content_contains_text.n2_content_contains_map .n2wait {
	right: 640px;
}

.n2wait .n2_wait_name_count {
	padding-left: 2px;
}

/* 
==============================
Splash Page 
==============================
*/

.n2Splash_button {
	padding: 0 5px;
}

.n2Splash_buttons .n2Splash_button_disabled {
	color: transparent;
}

.n2Splash_button_close {
	float: right;
}

.n2Splash_label_dontshow {
	padding-left: 50px;
	padding-right: 3px;
}

.n2Splash_ribbon_page {
	padding: 0 2px;
}

.n2Splash_ribbon_page_current {
	font-weight: bold;
}

/* 
==============================
Mail Form 
==============================
*/
.n2mailForm_input_contact {
	width: 500px;
	height: 150px;
}

.n2mailForm_input_message {
	width: 500px;
	height: 400px;
}

.n2mailForm_label {
	padding: 5px 0 0 0;
}

.n2mailForm_button {
	float: right;
	padding: 5px;
}

.n2mailForm_button_disabled {
	color: #ccc !important;
	pointer-events: none;
}

/* 
==============================
Document Selector 
==============================
*/
.nunaliit_module_title .n2widget_documentSelector {
	float: right;
	padding: 8px 20px;
}

/* 
==============================
Single Filter Selection 
==============================
*/
.nunaliit_module_title .n2widget_singleFilterSelection {
	float: right;
	padding: 8px 20px;
}

/* 
==============================
Model Browser Widget 
==============================
*/
.nunaliit_footer .n2widget_modelBrowser {
	display: none;
}
.nunaliit_user_advanced .nunaliit_footer .n2widget_modelBrowser,
.nunaliit_show_modelBrowserWidget .nunaliit_footer .n2widget_modelBrowser {
	display: block;
	float: right;
	margin: 2px;
}
.nunaliit_footer .n2widget_modelBrowser a {
	text-decoration: none;
	color: #fff;
}
.nunaliit_footer .n2widget_modelBrowser a:visited {
	color: #fff;
}
.n2widget_modelBrowser_model {
	display: block;
}
.n2widget_modelBrowser_model_selected {
	background-color: #ccc;
}
.n2widget_modelBrowser_list_docId {
	display: block;
}
.n2widget_modelBrowser_list_docId_selected {
	background-color: #ccc;
}

/* 
==============================
Sound 
==============================
*/
.n2CouchSound {
	position: absolute;
	height: 0;
	width: 0;
	overflow: hidden;
	visibility: hidden;
}

/* 
==============================
Map Legend 
==============================
*/
.n2widgetLegend {
	position: absolute;
	bottom: 10px;
	left: 10px;
}

.n2widgetLegend_outer {
	background-color: #000;
	color: #fff;
	padding: 10px;
	border-radius: 5px;
    border-color: #fff;
    border-width: 1px;
    border-style: solid;
    box-shadow: 3px 3px 3px 0 rgba(0,0,0, 0.25);
}

.n2widgetLegend_labelEntry::after {
	content: "";
	display: block;
	clear: both;
}

.n2widgetLegend_preview {
	float: left;
}

